# snakemake_ba

./: .gitignore  .pre-commit-config.yaml  404.html  Readme.md  index.html  objects.inv  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  docs.yml
docs/: mkdocs.yml
docs/docs/: index.md  parser.md  plot.md
parser/: index.html
plot/: index.html
search/: search_index.json
snakemake_ba/: __init__.py  parser.py  plot.py
tests/: test_parser.py
