[project]
name = "snakemake_ba"
version = "0.1"
description = "found and compile benchmark file associate to a snakemake rules in a `pandas.DataFrame`"
authors = [
    {name = "Pierre Marijon", email = "pierre@marijon.fr"},
]
dependencies = [
    "pandas>=1.4.2",
    "altair>=4.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.scripts]
test = { shell = "pytest tests/", help = "Run test" }
lint = { shell = "pre-commit run --all-files", help = "Run lint tools" }
doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist>=1.31.0"
]

doc = [
    "mkdocs>=1.1",
    "mkdocs-material>=7.3",
    "mkdocstrings[python]>=0.18",
    "markdown-include>=0.5.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["snakemake_pa"]
known_third_party = [
]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
